# kdeappstream

./: CMakeLists.txt  CMakeLists2.txt  README.md  test.json
src/: CMakeLists.txt  KAppStream.pro  KAppStreamLib.pro  TestApp.pro  TestWindow.cpp  context.js  main.cpp
src/events/: EventDispather.cpp  EventDispather.h  EventFilter.cpp  EventFilter.h
src/hook/: CMakeLists.txt  KAppStreamHook.pro
src/hook/kernel/: qapplication_x11.cpp  qwidget.cpp
src/hooking/: FunctionOverwriterFactory.cpp  FunctionOverwriterFactory.h  Probe.cpp  UnixFunctionOverwriter.cpp  UnixFunctionOverwriter.h
src/lib/: CMakeLists.txt  KAppStreamLib.pro
src/lib/events/: Event.cpp  Event.h  EventConverter.cpp  EventConverter.h  EventDispatcher.cpp  EventDispatcher.h  EventDispather.cpp  EventDispather.h  EventFilter.cpp  EventFilter.h
src/lib/hooking/: AbstractFunctionOverwriter.cpp  AbstractFunctionOverwriter.h  Probe.cpp  WidgetsCollection.cpp  WidgetsCollection.h
src/lib/paint/: ImagesBuffer.cpp  ImagesBuffer.h  ImagesHostServer.cpp  ImagesHostServer.h  ImagesHostThread.cpp  ImagesHostThread.h  JSONBuilder.cpp  JSONBuilder.h  PaintDevice.cpp  PaintEngine.cpp  WebRenderer.cpp  WebRenderer.h
src/lib/websocket/: QWsServer.cpp  QWsServer.h  QWsSocket.cpp  QWsSocket.h  WebsocketServer.cpp  WebsocketServer.h  WebsocketThread.cpp  WebsocketThread.h
src/paint/: JSONBuilder.cpp  JSONBuilder.h  PaintDevice.cpp  PaintDevice.h  PaintEngine.cpp  PaintEngine.h  WebRenderer.cpp  WebRenderer.h
src/server/: ACLProvider.cpp  ACLProvider.h  ApplicationWrapperThread.cpp  ApplicationWrapperThread.h  CMakeLists.txt  CMakeLists2.txt  HttpServer.cpp  HttpServer.h  HttpService.cpp  HttpService.h  KAppStreamServer.pro  WebSocketServer.cpp  WebSocketServer.h  WebSocketService.cpp  WebSocketService.h  canvas.html  index.html  main.cpp
src/server/db/: Application.h  CMakeLists.txt  DatabaseObject.h  DatabaseService.cpp  DatabaseService.h  KAppStreamServer.pro  KAppStreamServerDatabase.pro
src/server/http/: CMakeLists.txt  HttpServer.cpp  HttpService.cpp  KAppStreamServer.pro
src/test/: .directory  CMakeLists.txt  TestApp.pro  TestWindow.cpp  TestWindow.h  TestWindow.ui  main.cpp  main_qt.cpp
src/websocket/: HttpServer.cpp  HttpServer.h  QWsServer.cpp  QWsSocket.cpp  WebsocketServer.cpp  WebsocketServer.h  WebsocketThread.cpp  WebsocketThread.h  index.html
thesis/: .gitignore  bibliography.bib  inz.cls  thesis.aux  thesis.ilg  thesis.lof  thesis.lot  thesis.tex  thesis.tex.Backup-20121025-134723  thesis.toc
thesis/addons/: addons.tex
thesis/img/: paintsystem-core.png.bb
thesis/implementation/: client_details.tex  events.tex  problems.tex  render.tex  render_client.tex  server_details.tex
thesis/implementation/events/: activate.tex  close.tex  keyboard.tex  mouse.tex
thesis/implementation/render/: ellipse.tex  image.tex  line.tex  path.tex  point.tex  polygon.tex  rectangle.tex  state.tex  text.tex
thesis/introduction/: introduction.tex
thesis/problem_definition/: acl.tex  communication.tex  data.tex  problem_definition.tex  render.tex  server-flow.tex  simulation.tex
thesis/summary/: summary.tex
thesis/tests/: internet.tex  local.tex  tests.tex
thesis/theory/: gtk.tex  html.tex  qt.tex
