PROJECT( kde-appstream )

SET( CMAKE_INSTALL_PREFIX "/usr" )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
SET( CMAKE_CXX_FLAGS_DEBUG "-O0" )

FIND_PACKAGE( KDE4 REQUIRED )
FIND_LIBRARY( DL_LIB NAMES ${CMAKE_DL_LIBS} )
MESSAGE( STATUS "Using dl library: ${DL_LIB}" )

INCLUDE( KDE4Defaults )

SET( CMAKE_PACKAGE_QTGUI TRUE )
SET( QT_USE_QTXML TRUE )

ADD_DEFINITIONS( -Wall )
ADD_DEFINITIONS( -DQT_SHARED )
ADD_DEFINITIONS( -DQT_TEST )

ADD_SUBDIRECTORY( src )
