SET( KAPPSTREAM_SERVER_SRCS 
    ${CMAKE_CURRENT_SOURCE_DIR}/DatabaseService.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/Settings.cpp  
    ${CMAKE_CURRENT_SOURCE_DIR}/Application.cpp  
    ${CMAKE_CURRENT_SOURCE_DIR}/Connection.cpp )

SET( KAPPSTREAM_SERVER_HEADERS 
    ${CMAKE_CURRENT_SOURCE_DIR}/DatabaseService.h 
    ${CMAKE_CURRENT_SOURCE_DIR}/Settings.h  
    ${CMAKE_CURRENT_SOURCE_DIR}/Application.h  
    ${CMAKE_CURRENT_SOURCE_DIR}/Connection.h )

SET( INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR} )

SET( COMMON_INCLUDE_DIRS
    ${COMMON_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/../ )

SET( KAPPSTREAM_SERVER_DATA_DIR
    ${DATA_INSTALL_DIR}/kdeappstream/data/ )

INCLUDE_DIRECTORIES( ${QT_INCLUDE}
                     ${KDE4_INCLUDES}
                     ${INCLUDE_DIRS} )

KDE4_ADD_SHARED_LIBRARY( kappstream-server-db ${KAPPSTREAM_SERVER_SRCS} )

TARGET_LINK_LIBRARIES( kappstream-server-db
                       ${QT_QTCORE_LIBRARY}
                       ${QT_QTGUI_LIBRARY}
                       ${KDE4_KDEUI_LIBS}
                       ${KDE4_KPARTS_LIBS} )

INSTALL( FILES ${CMAKE_CURRENT_SOURCE_DIR}/connections.data DESTINATION ${KAPPSTREAM_SERVER_DATA_DIR} )
INSTALL( TARGETS kappstream-server-db ${INSTALL_TARGETS_DEFAULT_ARGS} )
